1.3-19

* numerous changes to NAMESPACE and gamm related functions to pass
  codetools checks.

* Improved outer iteration added via gdi.c coupled with gam.fit3. 
  Exact first and second derivatives of GCV/UBRE/AIC are now 
  available via new iteration methods. These improve the 
  speed and reliability of fitting in the generalized case. 

* magic.c::mgcv_mmult modified so that all inner loop calculations are 
  optimal (i.e. inner loop pointers increments are all 1).

* `smooth.construct' functions for "cc" and "cr" smooths now increase `k'
  to the minimum possible value (and warn), if it's too low. 

* `gam' modified to allow passing of `mustart' etc to gam.fit and 
  gam.fit2, properly

* `gam' modified to fix a bug whereby fitting in two steps using argument 
  `G' could fail when some sp's are to be estimated and some fixed.

* an argument `in.out' added to `gam' to allow user initialization of 
  smoothing parameters when using `outer' iteration in the generalized 
  case. This can speed up analyses that rely on several refits of the same 
  model. 

1.3-18

* gamm modifed so that weights dealt with properly if lme type varFunc 
  used. This is only possible in the non-generalized case, as gamm.Rd 
  now clarifies.

* slight modification to s() to add `width.cutoff=500' to `deparse'

* by variables not handled properly in p-spline example in 
  smooth.construct.Rd - fixed.

* bug fix in summary.gam.Rd example (pmax -> pmin)

* color example added to plot.gam.Rd

* bug fix in `smooth.construct.tensor.smooth.spec' - class "cyclic.smooth"
  marginals no longer re-parameterized.

* `te' documentation modified to mention that marginal reparameterization 
  can destabilize tensor products. 

1.3-17

* print.summary.gam prints estimated ranks more prettily (thanks Martin 
  Maechler)

* `fix.family.link' can now handle the `cauchit' link, and also appends a
   third derivative of link function to the family (not yet used).
